# mobius

./: .coderabbit.yaml  .dive-ci.yaml  .dockerignore  .editorconfig  .env.coderabbit.sample  .env.example  .env.sample  .gitignore  .hadolint.yaml  .pre-commit-config.yaml  .prettierignore  .prettierrc.json  CLAUDE.md  DEPENDENCY_UPDATES.md  FIX_DUPLICATE_CORRELATION_ID.md  GEMINI.md  Makefile  README.md  SHELL_SCRIPTS_HARDENING.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt
.claude/: CLAUDE.md  GEMINI.md  settings.json  settingsback.json
.claude/.claude/sessions/: .current-session
.claude/commands/: CLAUDE.md  GEMINI.md  all_tools.md  api_health.md  build_health.md  code_metrics.md  container_health.md  database_health.md  dependency_check.md  diff_review.md  documentation_coverage.md  error_tracking.md  generate_knowledge_graph.md  get_file_purpose.md  git_stats.md  performance_profile.md  plan_feature.md  prime.md  run_project_script.md  security_audit.md  summarize_recent_changes.md
.claude/hooks/: .env.sample  CLAUDE.md  GEMINI.md  auto_format_code.sh  check_dependencies_hook.py  check_large_files_hook.py  check_line_count_hook.py  clean_session.py  context7_reminder_post.py  extract_conversation.py  generate_commit_summary.py  get_api_key.py  git_branch_protection_hook.py  log_tool_usage.py  log_tool_usage.sh  pre_tool_use.py  run_tests_on_change.py  session_commit_advanced.py  session_commit_detailed.sh  session_commit_full.py  sync_all_sessions.py  trigger_doc_update_hook.py  validate_bash_command.py
.claude/sessions/: .current-session  .last-message-id
.claude/sessions/archive/: session_20250707_163117_committed.md  session_20250707_163243_committed.md  session_20250707_163323_committed.md  session_20250707_185527_committed.md  session_20250707_190031_committed.md  (+36 more)
.github/: CLAUDE_CODE_REVIEW.md
.github/workflows/: ci-environment-setup.md  claude-code-review.yml  deploy-production.yml.example  docker-lint.yml
ai_docs/: CLAUDE.md  GEMINI.md  GEMINI_CLAUDE_Analysis_Report.md  IMPLEMENTATION_ROADMAP.md  QUICK_START.md
ai_docs/Research/: CLAUDE.md  Context Engineering Platform for AI Coding Assistants.md  Context Engineering for AI Coding Assistants.md  GEMINI.md  The Definitive Guide to Context Engineering for AI.md
ai_docs/planning/: CLAUDE.md  GEMINI.md  Phase1_Architecture_Design.md  Phase1_Context_Ingestion_Retrieval.md  Phase1_Foundation_Plan.md  Phase1_LLM_Connections.md  Phase1_Team_Structure.md  Phase1_Technical_Guidelines.md  Phase1_VSCode_Integration.md  Phase1_Weekly_Milestones.md
ai_docs/tasks/: 001.md  002.md  003.md  004.md  005.md  006.md  007.md  008.md  009.md  010.md  011.md  012.md  013.md  014.md  015.md  016.md  017.md  018.md  019.md  020.md  021.md  022.md  023.md  024.md  025.md  026.md  027.md  028.md  029.md  030.md  031.md  032.md  033.md  034.md  035.md  036.md  037.md  038.md  039.md  040.md  (+17 more)
alembic/: CLAUDE.md  GEMINI.md  env.py
alembic/versions/: 001_initial_schema.py  CLAUDE.md  GEMINI.md
app/: CLAUDE.md  GEMINI.md  main.py
app/agents/: CLAUDE.md  GEMINI.md  base_agent.py
app/analytics/: CLAUDE.md  GEMINI.md
app/api/: CLAUDE.md  GEMINI.md
app/api/v1/: CLAUDE.md  (+2 more)
app/core/: CLAUDE.md  GEMINI.md  __init__.py  config.py  exceptions.py  logging.py
app/db/: __init__.py  base.py  models.py  vector_ops.py
app/integrations/: CLAUDE.md  GEMINI.md
app/middleware/: __init__.py  correlation.py  error_handler.py  logging.py
app/processing/: CLAUDE.md  GEMINI.md
app/repositories/: CLAUDE.md  GEMINI.md
app/services/: CLAUDE.md  GEMINI.md
app/storage/: CLAUDE.md  GEMINI.md
app/tests/: README.md  conftest.py  pytest.ini  test_fastapi_endpoints.py  test_pinecone_operations.py  verify_pinecone_connection.py
app/utils/: CLAUDE.md  GEMINI.md
backend/: Dockerfile  main.py  requirements.txt
docker/: CLAUDE.md  GEMINI.md
docker/backend/: CLAUDE.md  Dockerfile  GEMINI.md
docker/frontend/: CLAUDE.md  Dockerfile  Dockerfile.dev  GEMINI.md  nginx.conf
docker/nginx/: CLAUDE.md  GEMINI.md
docs/: CLAUDE.md  CODERABBIT_PEM_INSTRUCTIONS.md  CODERABBIT_SETUP.md  docker-build-targets.md  docker-linting-guide.md  tooling-guide.md
docs/api/: CLAUDE.md  GEMINI.md
docs/architecture/: CLAUDE.md  GEMINI.md
docs/deployment/: CLAUDE.md  GEMINI.md  docker-compose-fixes.md  host-binding-security.md  production-environment-variables.md
e2e/: CLAUDE.md  GEMINI.md
e2e/cypress/: CLAUDE.md  GEMINI.md
e2e/playwright/: CLAUDE.md  GEMINI.md
frontend/: .env.example  .env.sample  .eslintignore  .eslintrc.cjs  .eslintrc.json  .gitignore  .prettierrc  .prettierrc.json  README.md  index.html  package-lock.json  package.json  run-tests.sh  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  main.tsx  vite-env.d.ts
infrastructure/: CLAUDE.md  GEMINI.md  init.sql
infrastructure/helm/: CLAUDE.md  GEMINI.md
infrastructure/kubernetes/: CLAUDE.md  GEMINI.md
infrastructure/terraform/: CLAUDE.md  GEMINI.md
scripts/: CLAUDE.md  analyze_report.py  test_migrate_task_paths.py  verify_migration.py
scripts/backend/: CLAUDE.md  check-production-config.sh
scripts/deployment/: CLAUDE.md  GEMINI.md
scripts/frontend/: CLAUDE.md
scripts/monitoring/: CLAUDE.md  GEMINI.md
scripts/pre-commit/: check-env-files.sh  generate_commit_msg.py
scripts/prepare-commit-msg/: create_session_commit.py  sanitize.py
src/: CLAUDE.md  GEMINI.md
src/api/: CLAUDE.md  GEMINI.md
src/components/: CLAUDE.md  GEMINI.md
src/features/: CLAUDE.md  GEMINI.md
src/hooks/: CLAUDE.md  GEMINI.md
src/pages/: CLAUDE.md  GEMINI.md
src/services/: CLAUDE.md  GEMINI.md
src/store/: CLAUDE.md  GEMINI.md
src/styles/: CLAUDE.md
src/types/: CLAUDE.md  GEMINI.md
src/utils/: CLAUDE.md  GEMINI.md
tests/: CLAUDE.md  GEMINI.md  README_ENVIRONMENT_TESTS.md  test_dev_scripts.sh
tests/backend/: CLAUDE.md  conftest.py
tests/contracts/: CLAUDE.md  GEMINI.md
tests/frontend/: CLAUDE.md
(+146 files in other folders)
